Adding GitHub URL to top comment, linking back to this repo

--- a/reset.css
+++ b/reset.css
@@ -1,4 +1,5 @@
 /* @module reset
+ * <https://github.com/davidjgoss/modern-reset>
  * A conservative CSS reset to undo some browser defaults
  * and give us a reliable starting point for styling
  * derived from <http://meyerweb.com/eric/tools/css/reset/>
