--- a/reset.css
+++ b/reset.css
@@ -108,3 +108,8 @@ sup {
     font-size: 0.875em;
     vertical-align: super;
 }
+
+/* prevent text in draggable items being selectable */
+[draggable] {
+    user-select: none;
+}
